err/parchment.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Cython'...
Listing './lib/python3.5/site-packages/Cython/Build'...
Listing './lib/python3.5/site-packages/Cython/Build/Tests'...
Listing './lib/python3.5/site-packages/Cython/Compiler'...
Listing './lib/python3.5/site-packages/Cython/Compiler/Tests'...
Listing './lib/python3.5/site-packages/Cython/Debugger'...
Listing './lib/python3.5/site-packages/Cython/Debugger/Tests'...
Listing './lib/python3.5/site-packages/Cython/Distutils'...
Listing './lib/python3.5/site-packages/Cython/Includes'...
Listing './lib/python3.5/site-packages/Cython/Includes/Deprecated'...
Listing './lib/python3.5/site-packages/Cython/Includes/cpython'...
Listing './lib/python3.5/site-packages/Cython/Includes/libc'...
Listing './lib/python3.5/site-packages/Cython/Includes/libcpp'...
Listing './lib/python3.5/site-packages/Cython/Includes/numpy'...
Listing './lib/python3.5/site-packages/Cython/Includes/posix'...
Listing './lib/python3.5/site-packages/Cython/Plex'...
Listing './lib/python3.5/site-packages/Cython/Runtime'...
Listing './lib/python3.5/site-packages/Cython/Tempita'...
Listing './lib/python3.5/site-packages/Cython/Tests'...
Listing './lib/python3.5/site-packages/Cython/Utility'...
Listing './lib/python3.5/site-packages/Cython-0.27.3.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/mistune-0.8.3.dist-info'...
Listing './lib/python3.5/site-packages/parchment-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyximport'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/src'...
Listing './lib/python3.5/site-packages/src/commands'...
Listing './lib/python3.5/site-packages/wheel'...
Listing './lib/python3.5/site-packages/wheel/signatures'...
Listing './lib/python3.5/site-packages/wheel/tool'...
Listing './lib/python3.5/site-packages/wheel-0.30.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
